packages/typ/tests/fixtures/diagnostics/0560_functor_generative_value_mismatch_02.ml.expected
File "0560_functor_generative_value_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0560_functor_generative_value_mismatch_02 is not a valid module name.

File "0560_functor_generative_value_mismatch_02.ml", line 9, characters 19-31:
9 | let _ : B_beta.t = A_beta.value
                       ^^^^^^^^^^^^
Error: The value A_beta.value has type A_beta.t
       but an expression was expected of type B_beta.t
